[project]
name = "ukam-os-builder"
version = "0.1.0.dev6"
description = "Download, process and transform OS address data (NGD or ABP) for UK address matching"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "duckdb>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/moj-analytical-services/prepare_ngd_for_address_matching"
Repository = "https://github.com/moj-analytical-services/prepare_ngd_for_address_matching"
Issues = "https://github.com/moj-analytical-services/prepare_ngd_for_address_matching/issues"

[project.scripts]
ukam-os-build = "ukam_os_builder.cli:main"
ukam-os-setup = "ukam_os_builder.setup_wizard:main"
ukam-ngd-build = "ukam_os_builder.cli:main"
ukam-ngd-setup = "ukam_os_builder.setup_wizard:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ukam_os_builder"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]
